# wallrus

./: .gitignore  Cargo.toml  README.md  agents.md  flake.nix  install.sh
data/: io.github.megakode.Wallrus.desktop  io.github.megakode.Wallrus.metainfo.xml
data/palettes/: colorhunt_dl.py
data/shaders/: bars.glsl  bloom.glsl  blur.glsl  chromatic.glsl  circle.glsl  common.glsl  dunes.glsl  effects.glsl  plasma.glsl  terrain.glsl  vertex.glsl  waves.glsl
flatpak/: RELEASING.md  flatpak-cargo-generator.py  io.github.megakode.Wallrus.json
nix/: devShell.nix  package.nix
src/: export.rs  gl_renderer.rs  main.rs  palette.rs  shader_presets.rs  wallpaper.rs  window.rs
