[package]
name = "wallrus"
version = "1.0.0"
edition = "2021"
authors = ["megakode"]
description = "A GNOME application for generating abstract wallpapers using shaders"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glow = "0.14"
image = "0.25"
dirs = "5.0"
libc = "0.2"
ashpd = "0.9"

[profile.release]
opt-level = 3
lto = true
