[package]
name = "wallrus"
version = "1.1.0"
edition = "2021"
authors = ["megakode"]
description = "A GNOME application for generating abstract wallpapers using shaders"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glow = "0.14"
image = "0.25"
libc = "0.2"
ashpd = "0.9"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
